# VMarchTools

./: CMakeLists.txt  README  README.md  cmdexec.c  cmdexec.cpp  cmdexec.h  color.h  init.h  jarfind.cpp  jarfind.h  main.c  main.cpp  make  opts.c  opts.h  proc.cpp  proc.h  ps.h  systemctl.c  systemctl.h  tools.cpp  typedef.h  verror.h  vmarch-common-utils.cpp  vmarch-init.c  vmarchcmd-core.h  vmarchcmd-exec.c  vmarchcmd-exec.cpp  vmarchcmd-init.c  vmarchcmd-init.cpp  vmarchcmd.cpp  vmarchcmd.h  vmarchio.cpp  vmarchio.h  vmarchtools.cpp  vmarchtools.h
c/: dump.cpp  exec.cpp  pak.cpp  ps.cpp  restart.cpp  start.c  start.cpp  stop.c  stop.cpp
cmd/: declcmd.h  dump.cpp  exec.cpp  pak.cpp  ps.cpp  restart.cpp  sp.cpp  start.cpp  status.cpp  status.h  stop.cpp  version.cpp  vps.cpp  vps.h
cmd/start/: startcmd.h
cmdexec/: cmdexec.cpp  cmdexec.h
cpu/: cpu.h
hd/: hard-disk.h
include/vmarch/tool/: typedef.h
mm/: mm.h
net/: net.h
opts/: opts.c  opts.h
os/: extapi.h
os/linux/: io.c
os/win32/: win32io.c
platform/linux/: ffind.cpp  proc.c
platform/win32/: win32proc.c
platfrom/linux/: io.h
platfrom/win32/: win32io.h  win32proc.c
proc/: proc.h
sh/: vmarch_find_port.sh  vps.sh  xps
tool/: array.h  strtools.h  typedef.h
